@@ -21,6 +21,9 @@ TowersOfTheWild
 - Add new mods:
 Modular routers: item/fluid transfer
 Shut-up-experimental-settings (client)
+Campfire Overhual
+WaterSource
+TowersOfTheWild (fixed version)
 - Content:
 Diet effects are more harsh
 
